discussion/kv_engine/170541/170541_rev26_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-17 12:52:48.000000000
Message: 
Uploaded patch set 26.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-17 13:27:02.000000000
Message: 
Patch Set 26: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15679/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15679/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15679/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44021/ : FAILURE

Failure of GoogleTest "PersistentAndEphemeral/StreamTest.validate_compression_control_message_denied/ephemeral":

<pre>
[ RUN      ] PersistentAndEphemeral/StreamTest.validate_compression_control_message_denied/ephemeral
unknown file: error: C++ exception with description "cb::io::rmrf: remove of file \\?\C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db\test.829701\nexus-secondary\magma.0\wal\wal.1 under ep_engine_ep_unit_tests.db/test.829701 failed: The data is invalid." thrown in TearDown().
[  FAILED  ] PersistentAndEphemeral/StreamTest.validate_compression_control_message_denied/ephemeral, where GetParam() = "ephemeral" (18 ms)
PersistentAndEphemeral/StreamTest.validate_compression_control_message_denied/ephemeral
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44021/ )

Timeout of a CTest test 422/422 Test  #70: ep-engine_ep_unit_tests.DurabilityRespondAmbiguousTest ........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44021/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14526/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37106/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17755/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18470/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17434/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25836/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5388/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16497/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-17 14:20:48.000000000
Message: 
Patch Set 26:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15679/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15679/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15679/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14526/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37106/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17755/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18470/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17434/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25836/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5388/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16497/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44023/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
